# src/modules/analytics/analytics.router.ts
@@ -5,6 +5,7 @@ const router = Router();
 
 router.get("/", analyticsController.dashboardAnalytics);
 router.get("/chart-revenue", analyticsController.monthlyRevenueChart);
+router.get("/chart-equipment", analyticsController.mostOrderedEquipment);
 
 const analyticsRouter = router;
 export default analyticsRouter;
